--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "version": "0.0.1",
     "license": "BSD-2-Clause",
     "require": {
-        "php": "~7.3.0||~7.4.0"
+        "php": "~7.3.0||~7.4.0",
+        "digitalprint/printess-api-php": "^1.0"
     },
     "autoload": {
         "files": [ "registration.php" ],
