--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "digitalprint/printess-api-php": "^1.0",
         "twig/twig": "^2.0"
     },
+    "require-dev": {
+        "symplify/easy-coding-standard": "^12.0"
+    },
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
